--- a/param/ergoCub_nav2.yaml
+++ b/param/ergoCub_nav2.yaml
@@ -58,7 +58,7 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 2.0    #20.0
+    controller_frequency: 3.0    #20.0
     min_x_velocity_threshold: 0.01
     min_y_velocity_threshold: 0.01
     min_theta_velocity_threshold: 0.01
@@ -96,7 +96,7 @@ controller_server:
       force_reinit_new_goal_dist: 1.0   #1.0    #Reinitialize the trajectory if a previous goal is updated with a separation of more than the specified value in meters (skip hot-starting) 
       global_plan_viapoint_sep: -0.1   #0.3 -> 1.0 If positive, via-points are extrected from the global plan (path-following mode). The value determines the resolution of the reference path (min. separation between each two consecutive via-points along the global plan, if negative: disabled). Refer to parameter weight_viapoint for adjusting the intensity. 
       global_plan_prune_distance: 3.0 #1.0
-      feasibility_check_no_poses: 2 #2
+      feasibility_check_no_poses: 4 #2
       publish_feedback: False
       exact_arc_length: False   #If true, the planner uses the exact arc length in velocity, acceleration and turning rate computations (-> increased cpu time), otherwise the Euclidean approximation is used. 
           
@@ -124,11 +124,15 @@ controller_server:
       inflation_dist: 0.6   #Buffer zone around obstacles with non-zero penalty costs (should be larger than min_obstacle_dist in order to take effect). Also refer to the weight weight_inflation. 
       include_costmap_obstacles: True       #Specify if obstacles of the local costmap should be taken into account. Each cell that is marked as obstacle is considered as a point-obstacle. Therefore do not choose a very small resolution of the costmap since it increases computation time. In future releases this circumstance is going to be addressed as well as providing an additional api for dynamic obstacles. 
       costmap_obstacles_behind_robot_dist: 1.0    #1.0 #Limit the occupied local costmap obstacles taken into account for planning behind the robot (specify distance in meters). 
-      obstacle_poses_affected: 30   #15 #Number of nearest neighbors on the trajectory taken into account (increases the number of distance calculations for each obstacle). For small obstacles and point obstacles, this value can be small (<10). Increase the value again if the trajectory is not smooth enough close to obstacles. 
+      obstacle_poses_affected: 20   #30 #Number of nearest neighbors on the trajectory taken into account (increases the number of distance calculations for each obstacle). For small obstacles and point obstacles, this value can be small (<10). Increase the value again if the trajectory is not smooth enough close to obstacles. 
 
       dynamic_obstacle_inflation_dist: 0.6
       include_dynamic_obstacles: True   #If set to true, the motion of obstacles with non-zero velocity (provided via user-supplied obstacles on topic ~/obstacles or obtained from the costmap_converter) is predicted and considered during optimization via a constant velocity model.
 
+      legacy_obstacle_association: False  #False # The strategy of connecting trajectory poses with obstacles for optimization has been modified (see changelog). You can switch to the old/previous strategy by setting this parameter to true. Old strategy: for each obstacle, find the nearest TEB pose; new strategy: for each teb pose, find only "relevant" obstacles. 
+      obstacle_association_force_inclusion_factor: 2.0  #1.5 # The non-legacy obstacle association strategy tries to connect only relevant obstacles with the discretized trajectory during optimization. But all obstacles within a specifed distance are forced to be included (as a multiple of min_obstacle_dist). E.g. choose 2.0 in order toenforce the consideration obstacles within a radius of 2.0*min_obstacle_dist. [This parameter is used only if parameter legacy_obstacle_association is false] 
+      obstacle_association_cutoff_factor: 5.0 #5.0 # See obstacle_association_force_inclusion_factor, but beyond a multiple of [value]*min_obstacle_dist all obstacles are ignored during optimization. Parameter obstacle_association_force_inclusion_factor is processed first. [This parameter is used only if parameter legacy_obstacle_association is false] 
+ 
       costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
       costmap_converter_spin_thread: True
       costmap_converter_rate: 5
@@ -143,13 +147,13 @@ controller_server:
       obstacle_cost_exponent: 4.0
       weight_max_vel_x: 1.0   #1.0  #Optimization weight for satisfying the maximum allowed translational velocity 
       weight_max_vel_theta: 1.0   #Optimization weight for satisfying the maximum allowed angular velocity 
-      weight_acc_lim_x: 1.0
+      weight_acc_lim_x: 0.0   #1.0  removed weight_acc_lim_* -> You can ignore acceleration limits by setting the weight to 0.0. By doing so the complexity of the optimization and hence the computation time can be reduced. 
       weight_acc_lim_y: 0.0
-      weight_acc_lim_theta: 1.0
+      weight_acc_lim_theta: 0.0 #1.0
       weight_kinematics_nh: 1000.0    #reduce this significantly in order to adjust the tradeoff between compliant longitudinal motion and non-compliant lateral motion (strafing). 
-      weight_kinematics_forward_drive: 30.0  #1.0 #Optimization weight for forcing the robot to choose only forward directions (positive transl. velocities). A small weight (e.g. 1.0) still allows driving backwards. A value around 1000 almost prevents backward driving (but cannot be guaranteed). 
+      weight_kinematics_forward_drive: 20.0 #1.0 -> 30.0 #Optimization weight for forcing the robot to choose only forward directions (positive transl. velocities). A small weight (e.g. 1.0) still allows driving backwards. A value around 1000 almost prevents backward driving (but cannot be guaranteed). 
       weight_kinematics_turning_radius: 1.0
-      weight_optimaltime: 0.5   #1.0 - must be > 0 #Optimization weight for contracting the trajectory w.r.t transition/execution time 
+      weight_optimaltime: 0.1   #1.0 0.5- must be > 0 #Optimization weight for contracting the trajectory w.r.t transition/execution time 
       weight_shortest_path: 0.0
       weight_obstacle: 100.0  #Optimization weight for keeping a minimum distance from obstacles
       weight_inflation: 0.2   #0.1 #Optimization weight for the inflation penalty (should be small). 
@@ -162,7 +166,7 @@ controller_server:
 
       enable_homotopy_class_planning: True
       enable_multithreading: True
-      max_number_classes: 4   #4  #Restrict the number of alternative trajectories that are subject to optimization. Often 2 alternatives are sufficient (avoid obstacle on the left or right side). 
+      max_number_classes: 2   #4  #Restrict the number of alternative trajectories that are subject to optimization. Often 2 alternatives are sufficient (avoid obstacle on the left or right side). 
       selection_cost_hysteresis: 1.0  #Specify how much trajectory cost must a new candidate have w.r.t. a previously selected trajectory in order to be selected (selection if new_cost < old_cost*factor). 
       selection_prefer_initial_plan: 1.0
       selection_obst_cost_scale: 100.0  #Extra scaling of obstacle cost terms just for selecting the 'best' candidate. 
@@ -170,16 +174,16 @@ controller_server:
 
       roadmap_graph_no_samples: 15  #15 #Specify the number of samples generated for creating the roadmap graph 
       roadmap_graph_area_width: 6.0   #6.0  #Random keypoints/waypoints are sampled in a rectangular region between start and goal. Specify the width of that region in meters. 
-      roadmap_graph_area_length_scale: 1.0
-      h_signature_prescaler: 0.5  #1.0 #Scale internal parameter (H-signature) that is used to distinguish between homotopy classes. Warning: reduce this parameter only, if you observe problems with too many obstacles in the local cost map, do not choose it extremly low, otherwise obstacles cannot be distinguished from each other (0.2<value<=1). 
+      roadmap_graph_area_length_scale: 1.0  #Should be the factor multiplier to lenghten the distance from start-to goal, used to build the area where the sampling happens
+      h_signature_prescaler: 1.0  #1.0 -> 0.5 #Scale internal parameter (H-signature) that is used to distinguish between homotopy classes. Warning: reduce this parameter only, if you observe problems with too many obstacles in the local cost map, do not choose it extremly low, otherwise obstacles cannot be distinguished from each other (0.2<value<=1). 
       h_signature_threshold: 0.1  #0.1 #Two H-signatures are assumed to be equal, if both the difference of real parts and complex parts are below the specified threshold. 
-      obstacle_heading_threshold: 0.2  #1.0 ->0.45 #Specify the value of the scalar product between obstacle heading and goal heading in order to take them (obstacles) into account for exploration. 
+      obstacle_heading_threshold: 0.0  #1.0 ->0.2 #Specify the value of the scalar product between obstacle heading and goal heading in order to take them (obstacles) into account for exploration. 
       switching_blocking_period: 0.0  #0.0 #Specify a time duration in seconds that needs to be expired before a switch to a new equivalence class is allowed. 
       viapoints_all_candidates: True  #If true, all trajectories of different topologies are attached to the set of via-points, otherwise only the trajectory sharing the same topology as the initial/global plan is connected with them (no effect on test_optim_node)
       delete_detours_backwards: True    #True
-      detours_orientation_tolerance: 3.14    #
-      max_ratio_detours_duration_best_duration: 5.0   #3.0
-      visualize_hc_graph: False   #False
+      detours_orientation_tolerance: 1.57    #3.14
+      max_ratio_detours_duration_best_duration: 5.0   #3.0 -> 5.0
+      visualize_hc_graph: True   #False
       visualize_with_time_as_z_axis_scale: 0.0
 
       # Recovery
@@ -464,7 +468,7 @@ planner_server:
       angle_quantization_bins: 64         # For Hybrid nodes: Number of angle bins for search, must be 1 for 2D node (no angle search)
       analytic_expansion_ratio: 3.5       # For Hybrid/Lattice nodes: The ratio to attempt analytic expansions during search for final approach.
       analytic_expansion_max_length: 3.0    # For Hybrid/Lattice nodes: The maximum length of the analytic expansion to be considered valid to prevent unsafe shortcutting (in meters). This should be scaled with minimum turning radius and be no less than 4-5x the minimum radius
-      minimum_turning_radius: 0.30        # For Hybrid/Lattice nodes: minimum turning radius in m of path / vehicle
+      minimum_turning_radius: 0.10        # 0.3 For Hybrid/Lattice nodes: minimum turning radius in m of path / vehicle
       reverse_penalty: 2.1                # For Reeds-Shepp model: penalty to apply if motion is reversing, must be => 1
       change_penalty: 0.0                 # For Hybrid nodes: penalty to apply if motion is changing directions, must be >= 0
       non_straight_penalty: 1.20          # For Hybrid nodes: penalty to apply if motion is non-straight, must be => 1
